styled add card button and fixed spacing issues on list

--- a/public/styles.css
+++ b/public/styles.css
@@ -204,7 +204,6 @@ body {
   height: inherit;
   display: flex;
   align-items: center;
-  justify-content: space-between;
   width: 100%;
  }
 
@@ -235,28 +234,46 @@ body {
   pointer-events: none;
  }
 
- /* ////////// */
-
-
 .card {
   border: 1px solid black;
   height: 33vh;
-  display: flex;
-  flex-direction: column;
   flex-shrink: 0;
-  width: 30%;
+  width: 20%;
   margin-right: 1.5rem;
 }
 
-.card-display img {
-  height: 20rem;
-  width: 100%;
-  /* object-fit: cover;
-  object-position: bottom; */
+.card-display {
+  height: 50%;
+  position: relative;
 }
 
 .card-info {
-  text-align: left;
+  height: 50%;
+}
+
+.card-display img {
+  width: 100%;
+  height: 100%;
+  object-fit: contain;
+}
+
+.card-info {
+  margin-top: 2rem;
+  text-align: center;
+}
+
+.addOutfit-btn {
+  position: absolute;
+  left: 50%;
+  transform: translateX(-50%);
+  font-size: 10rem;
+  text-align: center;
+  background-color: transparent;
+  background-repeat: no-repeat;
+  border: none;
+  cursor: pointer;
+  overflow: hidden;
+  outline: none;
 }
 
 .thumbnail {
